--- a/index.html
+++ b/index.html
@@ -3,6 +3,9 @@
     <head>
         <meta charset="UTF8">
         <title>BarberShop</title> 
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&family=Open+Sans:wght@400;600&family=Raleway:wght@700&display=swap" rel="stylesheet">
     </head>
     <body>
         <header>
@@ -139,8 +142,8 @@
         <footer>
             <p>&copy;Copyright 2020</p>
             <ul>
-                <li>Instagram</li>
-                <li>YouTube</li>
+                <li><a href="https://www.instagram.com">Instagram</a></li>
+                <li><a href="https://www.youtube.com">YouTube</a></li>
             </ul>
         </footer>
        
