--- a/index.html
+++ b/index.html
@@ -6,132 +6,139 @@
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&family=Open+Sans:wght@400;600&family=Raleway:wght@700&display=swap" rel="stylesheet">
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.0.0/modern-normalize.min.css"/>
+        <link rel="stylesheet" href="/css/style.css">
     </head>
     <body>
-        <header>
+        <!--PageHeader-->
+        <header class="page-header">
             <img src="images/Logo.png" alt="Logo BarberShop App">
-            <nav>
-                <ul>
-                    <li><a href="about.html">About</a></li>
-                    <li><a href="services and prices.html">Services and prices</a></li>
-                    <li><a href="barbers.html">Barbers</a></li>
-                    <li><a href="contacts.html">Contacts</a></li>
+            <nav class="header-navigation">
+                <ul class="navigation-list unstyled-list">
+                    <li><a class="link" href="about.html">About</a></li>
+                    <li><a class="link" href="services and prices.html">Services and prices</a></li>
+                    <li><a class="link" href="barbers.html">Barbers</a></li>
+                    <li><a class="link" href="contacts.html">Contacts</a></li>
                 </ul>
-                <ul>
-                    <li><a href="tel:+123456789">+38 044 111 11 11</a></li>
-                    <li><button>ONLINE BOOKING</button></li>
+                <ul class="right-navigation-list unstyled-list">
+                    <li><a class="link" href="tel:+123456789">+38 044 111 11 11</a></li>
+                    <li class="link"><button class="online-booking-button">ONLINE BOOKING</button></li>
                 </ul>
             </nav>
         </header>
         <main>
-            <section>
-                <h3>A hair salon for men in Kyiv</h3>
-                <h2>BarberShop</h2>
-                <p>We are experts in trendy men’s haircuts. <br>
+            <!--HeroSection-->
+            <section class="hero-section">
+                <h3 class="hero-sub-title-section">A hair salon for men in Kyiv</h3>
+                <h2 class="hero-title-section">BarberShop</h2>
+                <p class="hero-text-section">We are experts in trendy men’s haircuts. <br>
                     We work quickly, carefully and with style.</p>
             </section>
-            <section>
-                <h3>ABOUT</h3>
+            <!--AboutSection-->
+            <section class="page-section about">
+                <h3 class="sub-title-section">ABOUT</h3>
                 <div>
-                    <img src="images/HairCut1.png" alt="HairCut1">
-                    <img src="images/HairCut2.png" alt="HairCut2">
+                    <img width="270" height="445" src="images/HairCut1.png" alt="HairCut1">
+                    <img width="270" height="445" src="images/HairCut2.png" alt="HairCut2">
                 </div>
                 <div>
-                    <h2>Best Barbershop in your city</h2>
-                    <p>If you want to add more confidence to your image, you should definitely visit us.</p>
-                    <p>We are a team that never stops at what has been achieved and are thirsty for changes. And when you fall into the hands of our master, you will never be the same again. We are a team that is always "on the same wave" with clients. Therefore, we are always ready to improve everyone who comes to us!</p>
-                    <button>ONLINE-BOOKING</button>
+                    <h2 class="title-section">Best Barbershop in your city</h2>
+                    <p class="text-section-first-text">If you want to add more confidence to your image, you should definitely visit us.</p>
+                    <p class="text-section">We are a team that never stops at what has been achieved and are thirsty for changes. And when you fall into the hands of our master, you will never be the same again. We are a team that is always "on the same wave" with clients. Therefore, we are always ready to improve everyone who comes to us!</p>
+                    <button class="online-booking-button">ONLINE-BOOKING</button>
                 </div>
             </section>
-            <section>
-                <h3>Spend your time with the best masters</h3>
-                <h2>Services and prices</h2>
-                <ul>
+            <!--ServicesSection-->
+            <section class="page-section services">
+                <h3 class="sub-title-section">Spend your time with the best masters</h3>
+                <h2 class="title-section">Services and prices</h2>
+                <ul class="unstyled-list">
                     <li>Men’s haircut<span>from 300 uah.</span></li>
                     <li>Beard trim<span></span>from 300 uah.</li>
                     <li>Mustache trim<span></span>from 200 uah.</li>
                     <li>Straight razor shave<span>from 200 uah.</span></li>
                 </ul>
-                <ul>
+                <ul class="unstyled-list">
                     <li>Trainee’s haircut<span>from 50 uah.</span></li>
                     <li>Haircut under the nozzle<span>from 200 uah.</span></li>
                     <li>Children’s haircut (0-12 y.o.)<span>from 300 uah.</span></li>
                     <li>Camouflage of gray hair<span>from 200 uah.</span></li>
                 </ul>
-                <button>ONLINE-BOOKING</button>
+                <button class="online-booking-button">ONLINE-BOOKING</button>
             </section>
-            <section>
-                <div>
-                    <div>
-                        <h3>600<sup>+</sup></h3>
-                        <p>Satisfied customers per day</p>
+            <!--PortfolioSection-->
+            <section class="page-section portfolio">
+                <div class="cards-left-side">
+                    <div class="card">
+                        <h3 class="card-title">600<sup class="sup">+</sup></h3>
+                        <p class="card-description">Satisfied customers per day</p>
                     </div>
-                    <div>
-                        <h3>50<sup>+</sup></h3>
-                        <p>Awards for excellent service</p>
+                    <div class="card">
+                        <h3 class="card-title">50<sup class="sup">+</sup></h3>
+                        <p class="card-description">Awards for excellent service</p>
                     </div>
-                    <div>
-                        <h3>20<sup>+</sup></h3>
-                        <p>Kyiv’s best barbers</p>
+                    <div class="card">
+                        <h3 class="card-title">20<sup class="sup">+</sup></h3>
+                        <p class="card-description">Kyiv’s best barbers</p>
                     </div>
-                    <div>
-                        <h3>100<sup>+</sup></h3>
-                        <p>Gifts for regular customers</p>
+                    <div class="card">
+                        <h3 class="card-title">100<sup class="sup">+</sup></h3>
+                        <p class="card-description">Gifts for regular customers</p>
                     </div>
-
                 </div>
                 <div>
-                    <h3>Old traditional school</h3>
-                    <h2>¿Why people come to us?</h2>
-                    <p>Only good things are said about us. But it's better to see and feel 1 time than read 10 times. </p>
+                    <h3 class="sub-title-section">Old traditional school</h3>
+                    <h2 class="title-section">¿Why people come to us?</h2>
+                    <p class="text-section-first-text">Only good things are said about us. But it's better to see and feel 1 time than read 10 times. </p>
                 </div>
             </section>
-            <section>
-                <h3>For true enjoyers of the atmosphere</h3>
-                <h2>Our barbers</h2>
-                <ul>
+            <!--OurBarbersSection-->
+            <section class="page-section our-barbers">
+                <h3 class="sub-title-section">For true enjoyers of the atmosphere</h3>
+                <h2 class="title-section">Our barbers</h2>
+                <ul class="unstyled-list our-barbers">
                     <li>
-                        <img src="images/emp1.png" alt="John Smith">
-                        <h3>John Smith</h3>
-                        <p>Extreme Barber</p>
+                        <img class="image" src="images/emp1.png" alt="John Smith">
+                        <h3 class="title">John Smith</h3>
+                        <p class="description">Extreme Barber</p>
                     </li>
                     <li>
-                        <img src="images/emp2.png" alt="Michele Doe">
-                        <h3>Michele Doe</h3>
-                        <p>Extreme Barber</p></li>
+                        <img class="image" src="images/emp2.png" alt="Michele Doe">
+                        <h3 class="title">Michele Doe</h3>
+                        <p class="description">Extreme Barber</p></li>
                     <li>
-                        <img src="images/emp3.png" alt="Alan Black">
-                        <h3>Alan Black</h3>
-                        <p>Extreme Barber</p>
+                        <img class="image" src="images/emp3.png" alt="Alan Black">
+                        <h3 class="title">Alan Black</h3>
+                        <p class="description">Extreme Barber</p>
                     </li>
                 </ul>
             </section>
-            <section>
-                <h3></h3>
-                <h2></h2>
-                <ul>
+            <!--ActivitiesSection-->
+            <section class="page-section activities">
+                <h3 class="sub-title-section">In Latin, "barba" means "beard"</h3>
+                <h2 hidden class="title-section">Haircut Action</h2>
+                <ul class="unstyled-list">
                     <li><img src="images/haircutAction1.png" alt="haircutAction"></li>
                     <li><img src="images/haircutAction2.png" alt="haircutAction"></li>
                     <li><img src="images/haircutAction3.png" alt="haircutAction"></li>
                     <li><img src="images/haircutAction4.png" alt="haircutAction"></li>
                 </ul>
             </section>
-            <section>
+            <!--OnlineBookingSection-->
+            <section class="page-section online-booking">
                 <div>
-                    <h3>Online-Booking</h3>
+                    <h3 class="sub-title-section">Online-Booking</h3>
                     <input placeholder="Name">
                     <input placeholder="Phone">
                     <input placeholder="Message">
-                    <button>Send</button>
+                    <button class="online-booking-button">Send</button>
                 </div>
                 <div>
-                    <h3></h3>
                     <address>
-                        <ul>
-                            <li><a href="st. Vasilkovaya, 7A
-                                Kiev, 08132"></a></li>
-                            <li><a href="tel:+380441111111">+38 044 111 11 11</a></li>
-                            <li><a href="mailto:barbershop@email.com">barbershop@email.com</a></li>
+                        <ul class="unstyled-list">
+                            <li><a class="link" href="st. Vasilkovaya, 7A Kiev, 08132">st. Vasilkovaya, 7A Kiev, 08132</a></li>
+                            <li><a class="link" href="tel:+380441111111">+38 044 111 11 11</a></li>
+                            <li><a class="link" href="mailto:barbershop@email.com">barbershop@email.com</a></li>
                         </ul>
                     </address>
                     <h3>Working hours</h3>
@@ -139,13 +146,13 @@
                 </div>
             </section>
         </main>
+        <!--PageFooter-->
         <footer>
             <p>&copy;Copyright 2020</p>
-            <ul>
-                <li><a href="https://www.instagram.com">Instagram</a></li>
-                <li><a href="https://www.youtube.com">YouTube</a></li>
+            <ul class="unstyled-list">
+                <li><a class="link-social" href="https://www.instagram.com">Instagram</a></li>
+                <li><a class="link-social" href="https://www.youtube.com">YouTube</a></li>
             </ul>
-        </footer>
-       
+        </footer>    
     </body>
 </html>
