--- a/index.html
+++ b/index.html
@@ -248,9 +248,15 @@
                     <h2 class="services-section__title">Contact</h2>
                     <address>
                         <ul class="contact-list unstyled-list">
-                            <li><a class="adress-line" href="st. Vasilkovaya, 7A Kiev, 08132">st. Vasilkovaya, 7A Kiev, 08132</a></li>
-                            <li><a class="phone" href="tel:+380441111111">+38 044 111 11 11</a></li>
-                            <li><a class="e-mail" href="mailto:barbershop@email.com">barbershop@email.com</a></li>
+                            <li class="contact-list__item"><a class="adress-line" href="st. Vasilkovaya, 7A Kiev, 08132"><svg width="24" height="24">
+                                <use href="images/icons-svg.svg#icon-map-pin"</use>
+                            </svg>st. Vasilkovaya, 7A Kiev, 08132</a></li>
+                            <li class="contact-list__item><a class="phone" href="tel:+380441111111"><svg width="24" height="24">
+                                <use href="images/icons-svg.svg#icon-phone"</use>
+                            </svg>+38 044 111 11 11</a></li>
+                            <li class="contact-list__item><a class="e-mail" href="mailto:barbershop@email.com"><svg width="24" height="24">
+                                <use href="images/icons-svg.svg#icon-mail"</use>
+                            </svg>barbershop@email.com</a></li>
                         </ul>
                     </address>
                     <h3><svg width="1" height="60"><use href="images/icons-svg.svg#icon-Line"></use></svg>Working hours</h3>
