--- a/index.html
+++ b/index.html
@@ -251,10 +251,10 @@
                             <li class="contact-list__item"><a class="adress-line" href="st. Vasilkovaya, 7A Kiev, 08132"><svg width="24" height="24">
                                 <use href="images/icons-svg.svg#icon-map-pin"</use>
                             </svg>st. Vasilkovaya, 7A Kiev, 08132</a></li>
-                            <li class="contact-list__item><a class="phone" href="tel:+380441111111"><svg width="24" height="24">
+                            <li class="contact-list__item"><a class="phone" href="tel:+380441111111"><svg width="24" height="24">
                                 <use href="images/icons-svg.svg#icon-phone"</use>
                             </svg>+38 044 111 11 11</a></li>
-                            <li class="contact-list__item><a class="e-mail" href="mailto:barbershop@email.com"><svg width="24" height="24">
+                            <li class="contact-list__item"><a class="e-mail" href="mailto:barbershop@email.com"><svg width="24" height="24">
                                 <use href="images/icons-svg.svg#icon-mail"</use>
                             </svg>barbershop@email.com</a></li>
                         </ul>
